Detail panel icon overlaps the publishing issues icon in the grid toolbar #667

--- a/modules/app-contentstudio/src/main/resources/assets/styles/view/mobile-content-item-statistics-panel.less
+++ b/modules/app-contentstudio/src/main/resources/assets/styles/view/mobile-content-item-statistics-panel.less
@@ -15,7 +15,7 @@
     display: none;
   }
 
-  @media screen and (max-width: 720px) {
+  @media screen and (max-width: @mobile-panel-width) {
     display: block;
     // Hack: prevents wrong rendering of the preview and details panel
     overflow: initial;
